--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                    <a href="https://www.instagram.com/thisisvinsan/"><i class="fa-brands fa-instagram"></i></a>
                    <a href="https://www.linkedin.com/in/vinay-sankar-perna/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="images/F_RESUME.pdf" download class ="btn btn2">Download Resume</a>
+                <a href="images/RESUME.pdf" download class ="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
